--- a/Views/Almacen/Index.cshtml
+++ b/Views/Almacen/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model  IEnumerable<MaritimaProject.Models.Almacen>
+﻿@model  IEnumerable<Almacen>
 @{
     ViewData["Title"] = "Informacion Almacen";
     Layout="_Simple2";
